fix mobile menu z-index, rearrange menu anchors, harmonize mob/tab/desktop menu

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -13,7 +13,6 @@
   }
 }
 .menu-toggle {
-  background-color: $complementaryColor;
   border: none;
 }
 .nav {
